fixed page change handlers and added tag searc functionality; backspace button breaks in firefox

--- a/public/style.css
+++ b/public/style.css
@@ -191,7 +191,6 @@ footer h1:hover {
     flex-wrap: wrap;
     justify-content: space-between;
     padding-top: 100px;
-    margin-bottom: 60px;
 }
 
 .gridItem {
